force-app/main/default/objects/Address_line__c/Address_line__c.object-meta.xml
<CustomObject>
    <description>Object for collecting address information for an activation</description>
    <label>Address line</label>
    <nameField>
        <displayFormat>ADR-{000000}</displayFormat>
        <label>Address line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>