force-app/main/default/objects/Address_line__c/fields/AdrProduct__c.field-meta.xml
<CustomField>
    <fullName>AdrProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Address lines</relationshipLabel>
    <relationshipName>Address_lines</relationshipName>
    <type>Lookup</type>
</CustomField>