force-app/main/default/objects/Address_line__c/fields/Circuit_ID_existing__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID_existing__c</fullName>
    <inlineHelpText>TN number of the old customer circuit to be moved</inlineHelpText>
    <label>Circuit_ID_existing</label>
    <type>TextArea</type>
</CustomField>