force-app/main/default/objects/Address_line__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact person on site</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Address lines</relationshipLabel>
    <relationshipName>Address_lines</relationshipName>
    <type>Lookup</type>
</CustomField>