force-app/main/default/objects/Address_line__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Not in use</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>