force-app/main/default/objects/Address_line__c/fields/Extra_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Extra_Equipment__c</fullName>
    <inlineHelpText>Add on for 4G Datanet</inlineHelpText>
    <label>Extra Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Extra_Equipment</valueSetName>
    </valueSet>
</CustomField>