force-app/main/default/objects/Address_line__c/fields/Local_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Company_Name__c</fullName>
    <inlineHelpText>Only to be entered if different from Company name from Account</inlineHelpText>
    <label>Local Company Name</label>
    <type>TextArea</type>
</CustomField>