force-app/main/default/objects/Address_line__c/fields/Monthly_add_on_fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_add_on_fee__c</fullName>
    <inlineHelpText>Total monthly fee of add on during contract period</inlineHelpText>
    <label>Monthly Add on fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>