force-app/main/default/objects/Address_line__c/fields/MultipleVPN__c.field-meta.xml
<CustomField>
    <fullName>MultipleVPN__c</fullName>
    <inlineHelpText>Used on Datanet for both Fiber and DSL</inlineHelpText>
    <label>MultipleVPN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MultipleVPN</valueSetName>
    </valueSet>
</CustomField>