force-app/main/default/objects/Address_line__c/fields/Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Postal_code__c</fullName>
    <label>Postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>