force-app/main/default/objects/Address_line__c/fields/Pr_month_Access_fee__c.field-meta.xml
<CustomField>
    <fullName>Pr_month_Access_fee__c</fullName>
    <inlineHelpText>Subscription fee per month in contract period</inlineHelpText>
    <label>Monthly Access fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>