force-app/main/default/objects/Address_line__c/fields/QoS_Realtime__c.field-meta.xml
<CustomField>
    <fullName>QoS_Realtime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search for QoS and all QoS products can be found</inlineHelpText>
    <label>QoS Realtime or Premium</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Name</field>
            <operation>contains</operation>
            <value>QoS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Address lines (QoS Realtime)</relationshipLabel>
    <relationshipName>Address_lines4</relationshipName>
    <type>Lookup</type>
</CustomField>