force-app/main/default/objects/Address_line__c/fields/Redundancy__c.field-meta.xml
<CustomField>
    <fullName>Redundancy__c</fullName>
    <inlineHelpText>Protection type - if diversity is not chosen it will always be primary_secondary</inlineHelpText>
    <label>Redundancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Redundancy</valueSetName>
    </valueSet>
</CustomField>