force-app/main/default/objects/Address_line__c/fields/Sales_type__c.field-meta.xml
<CustomField>
    <fullName>Sales_type__c</fullName>
    <description>The sales type of the product on this specific address. If the address already has this Telia product, it is simply a renewal.</description>
    <inlineHelpText>The sales type of the product on this specific address. If the address already has this Telia product, it is simply a renewal.</inlineHelpText>
    <label>Sales type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>