force-app/main/default/objects/Address_line__c/fields/Start_up_fee_Add_on_s__c.field-meta.xml
<CustomField>
    <fullName>Start_up_fee_Add_on_s__c</fullName>
    <inlineHelpText>Total start-up costs for all add on&apos;s</inlineHelpText>
    <label>Start-up fee Add on&apos;s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>