force-app/main/default/objects/Address_line__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Not in use</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>