force-app/main/default/objects/Address_line__c/fields/Static_Setup__c.field-meta.xml
<CustomField>
    <fullName>Static_Setup__c</fullName>
    <inlineHelpText>If Static is chosen then specify setup here</inlineHelpText>
    <label>Static Setup</label>
    <type>TextArea</type>
</CustomField>