force-app/main/default/objects/Address_line__c/fields/Termination_Point__c.field-meta.xml
<CustomField>
    <fullName>Termination_Point__c</fullName>
    <label>Termination Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Termination_Point</valueSetName>
    </valueSet>
</CustomField>