force-app/main/default/objects/Address_line__c/fields/Total_Access_fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Access_fee__c</fullName>
    <inlineHelpText>Access fee for the entire contract length (excl start-up fee)</inlineHelpText>
    <label>Total Access fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>