force-app/main/default/objects/Address_line__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <inlineHelpText>Enter Name of Vendor that will deliver connection</inlineHelpText>
    <label>Vendor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>